client/src/index.scss
body {
  background-image: url("./assets/img/background/coffee-beans-background.jpg");
  background-size: contain;
  /* background-repeat: repeat-x; */
}

#root {
  max-width: 1280px;
  margin: 0 auto;
  /* padding: 2rem; */
  text-align: center;

  /* background-color: black; */
}

#background-video {
  width: 100vw;
  height: 100vh;
  object-fit: cover;
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: -1;
}

form {
  /* border: 1px solid black; */

  padding: 50px;
  border-radius: 10px;
  background-color: #efefef;
}

.navbar {
  background-color: #efefef;
  height: 75px;
  margin-bottom: 75px;
}
.navbar-expand .navbar-nav .dropdown-menu {
  background-color: #efefef;
}

.link {
  text-decoration: none;
  color: black;
}

#cart {
  width: 25px;
}

#logo-img {
  position: absolute;
  width: 250px;
  top: -50px;
}

div #hero {
  height: 60vh;
  font-family: "Alexandria", sans-serif;
}

#hero img {
  margin: 50px;
}

.sign-container {
  margin: 50px 0;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");

body {
  font-family: "Ubuntu", sans-serif;
  // background-image: radial-gradient(
  //   farthest-corner at 40px 40px,
  //   #f35 0%,
  //   #43e 100%
  // );
}

// .container {
//   height: 100vh;
// }

// .flip-card-outer {
//   display: flex;
//   flex-direction: row;
//   width: 350px;
//   height: 350px;
//   margin: 25px 0;

//   &.focus-trigger:focus {
//     outline: 5px solid greenyellow;
//     outline-offset: 5px;
//   }

//   .flip-card-inner {
//     transform-style: preserve-3d;
//     transition: 0.5s linear 0.1s;
//     position: relative;
//     width: inherit;
//     height: inherit;

//     &.hover-trigger:hover {
//       transform: rotateY(180deg);
//     }

//     &.showBack {
//       transform: rotateY(180deg);
//     }

//     .card {
//       backface-visibility: hidden;
//       position: absolute;
//       top: 0;
//       left: 0;
//       width: 100%;
//       height: 100%;

//       &.front {
//         transform: rotateY(0);
//         background-color: #dedddc;
//         color: black;
//       }

//       &.back {
//         transform: rotateY(180deg);
//         background-color: #fff;
//         color: #2d2d2d;
//       }
//     }
//   }
// }

.coffee-img {
  object-fit: cover;
  border-radius: cover;
  width: 50vw;
  max-height: 30vh;
}

.coffee-container {
  margin: 0 auto;
  width: 100%;
}

// MEDIA QUERIES

// .card-column {
//   display: flex;
//   justify-content: center;
// }

